# Control-of-Dynamic-Parkour-Motions-for-a-Hopping-Leg-on-a-Broomstick

./: .gitignore  README.md
software/python/: pyproject.toml
software/python/experiments/: __init__.py
software/python/experiments/boomstick/: experiment_encoder_v2.py  experiment_parkour.py
software/python/experiments/parcour/: gains.toml  pb_gains.toml
software/python/hopping_leg/analysis/: __init__.py  plot.py
software/python/hopping_leg/parcour_functions/: OMP_plot.py  ballistic.py  ballistic_calculations.py  encoder_plot.py  hyrodyn_plotter.py  hyrodyn_tester.py  markers.py  max_force.py  obstacle_placement.py  optimal_motion_planning.py  optimal_motion_planning_correct.py  optimal_motion_planning_fide.py  optimal_motion_planning_front_and_back.py  optimal_motion_planning_front_and_back_v2.py  optimal_motion_planning_front_and_back_v3.py  optimal_motion_planning_full_circle.py  optimal_motion_planning_max_capacity.py  optimal_motion_planning_parkour_1.py  optimal_motion_planning_v2.py  optimal_motion_planning_v3.py  optimal_motion_planning_v3_backup.py  optimal_motion_planning_v5.py  optimal_motion_planning_v6.py  parabula.py  parkour_builder.py  run_OMP.py  test_ballistic_function.py
software/python/hopping_leg/plant/: __init__.py  dynamics.py  plant.py  transforms.py
software/python/hopping_leg/simulation/: __init__.py  pybullet.py  pybullet_p1.py
software/python/hopping_leg/state_estimation/: __init__.py  base_height.py  contact.py  encoder.py  energy.py  pybullet.py
software/python/hopping_leg/utils/: calc.py  (+5 more)
software/python/utils/: plotter.py
(+89 files in other folders)
